--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.10.1",
+    "recharts": "^3.5.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
